Closed Bug 287003 Opened 21 years ago Closed 21 years ago

###!!! ASSERTION: failed to rename corrupt mab file: 'NS_SUCCEEDED(rv)', file r:/mozilla/mailnews/addrbook/src/nsAddrDatabase.cpp, line 605

Categories

(SeaMonkey :: MailNews: Address Book & Contacts, defect)

x86
Windows XP
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: timeless, Assigned: standard8)

References

Details

(Keywords: assertion)

Attachments

(1 file, 1 obsolete file)

sorry about the middle stuff, i didn't realize it had happened and sometimes a bit of context is useful. preface: user = test os = wxp fs = ntfs5 quotas = enabled for user test on volume c:, limit: 1mb if you need access to a quotable account running on w2k, it can be arranged (rdc/mstsc/rdesktop to raistlin) steps: 1. open calendar 2. create a task ++WEBSHELL == 5 ++DOMWINDOW == 11 Welcome to jslib version 0.1.123 Global Constants: JS_LIBRARY jslib JS_LIB_FILE jslib.js JS_LIB_PATH chrome://calendar/content/jslib/ JS_LIB_VERSION 0.1.123 JS_LIB_AUTHORS Pete Collins <petejc@mozdevgroup.com> Eric Plaster <plaster@urbanrage.com> Martin.T.Kutschker <Martin.T.Kutschker@blackbox.net> JS_LIB_BUILD mozilla 1.3+ JS_LIB_ABOUT This is an effort to provide a fully functional js library for mozilla package authors to use in their applications JS_LIB_HOME http://jslib.mozdev.org/ Global Variables: JS_LIB_DEBUG JS_LIB_ERROR ********************* JS_LIB DEBUG IS ON ********************* chrome://calendar/content/jslib/io/io.js chrome://calendar/content/jslib/io/filesystem.js *** load: filesystem.js OK chrome://calendar/content/jslib/io/file.js *** load: file.js OK chrome://calendar/content/jslib/io/dir.js *** load: dir.js OK chrome://calendar/content/jslib/io/fileUtils.js *** load: fileUtils.js OK chrome://calendar/content/jslib/io/dirUtils.js *** load: dirUtils.js OK chrome://calendar/content/jslib/rdf/rdf.js chrome://calendar/content/jslib/rdf/rdfBase.js *** load: rdfBase.js OK chrome://calendar/content/jslib/rdf/rdfResource.js *** load: rdfResource.js OK chrome://calendar/content/jslib/rdf/rdfContainer.js *** load: rdfContainer.js OK *** load: rdf.js OK chrome://calendar/content/jslib/rdf/rdfFile.js *** load: rdfFile.js OK ************************************************************ * Call to xpconnect wrapped JSObject produced this error: * [Exception... "'this.CalendarPreferences.calendarWindow.currentView has no properties' when calling method: [nsIObserver::observe]" nsresult: "0x80570021 (NS_ERROR_XPC_JAVASCRIPT_ERROR_WITH_DETAILS)" location: "JS frame :: chrome://calendar/content/calendar.js :: getIntPref :: line 1340" data: yes] ************************************************************ ************************************************************ * Call to xpconnect wrapped JSObject produced this error: * [Exception... "'this.CalendarPreferences.calendarWindow.currentView has no properties' when calling method: [nsIObserver::observe]" nsresult: "0x80570021 (NS_ERROR_XPC_JAVASCRIPT_ERROR_WITH_DETAILS)" location: "JS frame :: chrome://calendar/content/calendar.js :: getIntPref :: line 1340" data: yes] ************************************************************ -----======[ ERROR ]=====----- ERROR: in dir.js:create (unable to create) Name: NS_ERROR_FAILURE Result: 2147500037 Message: Component returned failure code: 0x80004005 (NS_ERROR_FAILURE) [nsILocalFile.create] FileName: chrome://calendar/content/jslib/io/dir.js LineNumber: 119 NS_ERROR_NUMBER: NS_ERROR_FAILURE ------------------------------ JavaScript error: chrome://calendar/content/jslib/io/file.js, line 736: ++WEBSHELL == 6 ++DOMWINDOW == 12 ###!!! ASSERTION: morkBool_kFalse: '0', file r:/mozilla/db/mork/src/morkConfig.cpp, line 56 ###!!! ASSERTION: failed to rename corrupt mab file: 'NS_SUCCEEDED(rv)', file r:/mozilla/mailnews/addrbook/src/nsAddrDatabase.cpp, line 605 Break: at file r:/mozilla/mailnews/addrbook/src/nsAddrDatabase.cpp, line 605 + (*aMabFile).mPath {mData=0x0783cfc8 {mRefCount=1 mLength=95 mString=0x0783cfd0 "C:\Documents and Settings\test\Application Data\Mozilla\Profiles\Default\huk3srm9.slt\abook.mab" } } nsSimpleCharString rv 0x8052ffff unsigned int (NS_FILE_FAILURE) xpcom_core.dll!nsDebug::Assertion(const char * aStr=0x0ec3f540, const char * aExpr=0x0ec3f52c, const char * aFile=0x0ec3f4f8, int aLine=605) Line 109 C++ > addrbook.dll!nsAddrDatabase::Open(nsFileSpec * aMabFile=0x0736b378, int aCreate=1, nsIAddrDatabase * * pAddrDB=0x00128c48, int upgrading=1) Line 605 + 0x25 C++ addrbook.dll!nsAbMDBDirFactory::CreateDirectory(nsIAbDirectoryProperties * aProperties=0x0476ea68, nsISimpleEnumerator * * _retval=0x00128cd4) Line 158 + 0x49 C++ addrbook.dll!nsAbBSDirectory::CreateDirectoriesFromFactory(nsIAbDirectoryProperties * aProperties=0x0476ea68, DIR_Server * aServer=0x0732ec38, int aNotify=0) Line 119 + 0x33 C++ addrbook.dll!nsAbBSDirectory::GetChildNodes(nsISimpleEnumerator * * aResult=0x045ff928) Line 215 + 0x1a C++ addrbook.dll!nsAbDirectoryDataSource::GetTargets(nsIRDFResource * source=0x08985268, nsIRDFResource * property=0x0167ba90, int tv=1, nsISimpleEnumerator * * targets=0x045ff928) Line 239 + 0x1b C++ rdf.dll!CompositeAssertionEnumeratorImpl::GetEnumerator(nsIRDFDataSource * aDataSource=0x0b7ed238, nsISimpleEnumerator * * aResult=0x045ff928) Line 573 + 0x25 C++ rdf.dll!CompositeEnumeratorImpl::HasMoreElements(int * aResult=0x0012928c) Line 240 + 0x16 C++ gklayout.dll!nsRDFConMemberTestNode::FilterInstantiations(InstantiationSet & aInstantiations={...}, void * aClosure=0x0012957c) Line 388 + 0x2a C++ gklayout.dll!TestNode::Propagate(const InstantiationSet & aInstantiations={...}, void * aClosure=0x0012957c) Line 1044 + 0x13 C++ gklayout.dll!TestNode::Propagate(const InstantiationSet & aInstantiations={...}, void * aClosure=0x0012957c) Line 1054 C++ gklayout.dll!RootNode::Propagate(const InstantiationSet & aInstantiations={...}, void * aClosure=0x0012957c) Line 760 + 0x1e C++ gklayout.dll!nsXULContentBuilder::CreateContainerContents(nsIContent * aElement=0x0a557610, nsIRDFResource * aResource=0x08985268, int aNotify=0, nsIContent * * aContainer=0x00000000, int * aNewIndexInContainer=0x00000000) Line 1216 C++ gklayout.dll!nsXULContentBuilder::CreateTemplateAndContainerContents(nsIContent * aElement=0x0a557610, nsIContent * * aContainer=0x00000000, int * aNewIndexInContainer=0x00000000) Line 1140 C++ gklayout.dll!nsXULContentBuilder::CreateContents(nsIContent * aElement=0x0a557610) Line 1541 C++ gklayout.dll!nsXULElement::EnsureContentsGenerated() Line 2229 + 0x1b C++ gklayout.dll!nsXULElement::GetChildCount() Line 967 + 0x8 C++ gklayout.dll!nsContentList::PopulateWith(nsIContent * aContent=0x0a557610, int aIncludeRoot=1, unsigned int & aElementsToAppend=4294967294) Line 784 + 0xb C++ gklayout.dll!nsContentList::PopulateWith(nsIContent * aContent=0x0a3ec3e0, int aIncludeRoot=1, unsigned int & aElementsToAppend=4294967294) Line 788 C++ gklayout.dll!nsContentList::PopulateWith(nsIContent * aContent=0x0a52d5b8, int aIncludeRoot=1, unsigned int & aElementsToAppend=4294967294) Line 788 C++ gklayout.dll!nsContentList::PopulateWith(nsIContent * aContent=0x0b3a79d0, int aIncludeRoot=1, unsigned int & aElementsToAppend=4294967294) Line 788 C++ gklayout.dll!nsContentList::PopulateWith(nsIContent * aContent=0x0a58be20, int aIncludeRoot=1, unsigned int & aElementsToAppend=4294967294) Line 788 C++ gklayout.dll!nsContentList::PopulateWith(nsIContent * aContent=0x04562f28, int aIncludeRoot=1, unsigned int & aElementsToAppend=4294967294) Line 788 C++ gklayout.dll!nsContentList::PopulateWith(nsIContent * aContent=0x02fc0ae8, int aIncludeRoot=0, unsigned int & aElementsToAppend=4294967294) Line 788 C++ gklayout.dll!nsContentList::PopulateSelf(unsigned int aNeededLength=4294967295) Line 861 C++ gklayout.dll!nsContentList::BringSelfUpToDate(int aDoFlush=1) Line 973 C++ gklayout.dll!nsContentList::Length(int aDoFlush=1) Line 418 C++ gklayout.dll!nsContentList::GetLength(unsigned int * aLength=0x001298dc) Line 489 + 0xa C++ xpcom_core.dll!XPTC_InvokeByIndex(nsISupports * that=0x017aba68, unsigned int methodIndex=4, unsigned int paramCount=1, nsXPTCVariant * params=0x001298dc) Line 102 C++ xpc3250.dll!XPCWrappedNative::CallMethod(XPCCallContext & ccx={...}, XPCWrappedNative::CallMode mode=CALL_GETTER) Line 2068 + 0x1e C++ xpc3250.dll!XPCWrappedNative::GetAttribute(XPCCallContext & ccx={...}) Line 1887 + 0xe C++ xpc3250.dll!XPC_WN_GetterSetter(JSContext * cx=0x0994a7b0, JSObject * obj=0x07b96a68, unsigned int argc=0, long * argv=0x08640fd0, long * vp=0x00129bc4) Line 1343 + 0x9 C++ js3250.dll!js_Invoke(JSContext * cx=0x0994a7b0, unsigned int argc=0, unsigned int flags=2) Line 1293 + 0x20 C js3250.dll!js_InternalInvoke(JSContext * cx=0x0994a7b0, JSObject * obj=0x07b96a68, long fval=122567320, unsigned int flags=0, unsigned int argc=0, long * argv=0x00000000, long * rval=0x0012a768) Line 1390 + 0x14 C js3250.dll!js_InternalGetOrSet(JSContext * cx=0x0994a7b0, JSObject * obj=0x07b96a68, long id=12413840, long fval=122567320, JSAccessMode mode=JSACC_READ, unsigned int argc=0, long * argv=0x00000000, long * rval=0x0012a768) Line 1433 + 0x1f C js3250.dll!js_GetProperty(JSContext * cx=0x0994a7b0, JSObject * obj=0x07b96a68, long id=12413840, long * vp=0x0012a768) Line 2775 + 0x30 C js3250.dll!js_Interpret(JSContext * cx=0x0994a7b0, unsigned char * pc=0x09beb955, long * result=0x0012a8b4) Line 3393 + 0x62e C js3250.dll!js_Invoke(JSContext * cx=0x0994a7b0, unsigned int argc=0, unsigned int flags=2) Line 1313 + 0x13 C js3250.dll!js_InternalInvoke(JSContext * cx=0x0994a7b0, JSObject * obj=0x0731de20, long fval=120708856, unsigned int flags=0, unsigned int argc=0, long * argv=0x00000000, long * rval=0x0012b3d4) Line 1390 + 0x14 C js3250.dll!js_InternalGetOrSet(JSContext * cx=0x0994a7b0, JSObject * obj=0x0731de20, long id=115831552, long fval=120708856, JSAccessMode mode=JSACC_READ, unsigned int argc=0, long * argv=0x00000000, long * rval=0x0012b3d4) Line 1433 + 0x1f C js3250.dll!js_GetProperty(JSContext * cx=0x0994a7b0, JSObject * obj=0x0731de20, long id=115831552, long * vp=0x0012b3d4) Line 2775 + 0x30 C js3250.dll!js_Interpret(JSContext * cx=0x0994a7b0, unsigned char * pc=0x08d6adc1, long * result=0x0012b520) Line 3393 + 0x62e C js3250.dll!js_Invoke(JSContext * cx=0x0994a7b0, unsigned int argc=1, unsigned int flags=2) Line 1313 + 0x13 C js3250.dll!js_InternalInvoke(JSContext * cx=0x0994a7b0, JSObject * obj=0x0731e048, long fval=120709288, unsigned int flags=0, unsigned int argc=1, long * argv=0x0012c07c, long * rval=0x0012c07c) Line 1390 + 0x14 C js3250.dll!js_InternalGetOrSet(JSContext * cx=0x0994a7b0, JSObject * obj=0x0731e048, long id=25156760, long fval=120709288, JSAccessMode mode=JSACC_WRITE, unsigned int argc=1, long * argv=0x0012c07c, long * rval=0x0012c07c) Line 1433 + 0x1f C js3250.dll!js_SetProperty(JSContext * cx=0x0994a7b0, JSObject * obj=0x0731e048, long id=25156760, long * vp=0x0012c07c) Line 2861 + 0x32 C js3250.dll!js_Interpret(JSContext * cx=0x0994a7b0, unsigned char * pc=0x07a35f64, long * result=0x0012c1c8) Line 3404 + 0x60b C js3250.dll!js_Invoke(JSContext * cx=0x0994a7b0, unsigned int argc=0, unsigned int flags=2) Line 1313 + 0x13 C js3250.dll!js_InternalInvoke(JSContext * cx=0x0994a7b0, JSObject * obj=0x0731e048, long fval=129591824, unsigned int flags=0, unsigned int argc=0, long * argv=0x00000000, long * rval=0x0012c2ec) Line 1390 + 0x14 C js3250.dll!JS_CallFunctionValue(JSContext * cx=0x0994a7b0, JSObject * obj=0x0731e048, long fval=129591824, unsigned int argc=0, long * argv=0x00000000, long * rval=0x0012c2ec) Line 3831 + 0x1f C gklayout.dll!nsXBLProtoImplAnonymousMethod::Execute(nsIContent * aBoundElement=0x02fc0960) Line 340 + 0x1a C++ gklayout.dll!nsXBLPrototypeBinding::BindingAttached(nsIContent * aBoundElement=0x02fc0960) Line 381 + 0x12 C++ gklayout.dll!nsXBLBinding::ExecuteAttachedHandler() Line 758 C++ gklayout.dll!nsBindingManager::ProcessAttachedQueue() Line 773 C++ gklayout.dll!nsCSSFrameConstructor::ContentInserted(nsIContent * aContainer=0x00000000, nsIFrame * aContainerFrame=0x00000000, nsIContent * aChild=0x0458b580, int aIndexInContainer=0, nsILayoutHistoryState * aFrameState=0x00000000, int aInReinsertContent=0) Line 9137 C++ gklayout.dll!PresShell::InitialReflow(int aWidth=1590, int aHeight=30) Line 2790 C++ gklayout.dll!nsXULDocument::StartLayout() Line 2157 C++ gklayout.dll!nsXULDocument::ResumeWalk() Line 3175 C++ gklayout.dll!nsXULDocument::EndLoad() Line 742 C++ gklayout.dll!XULContentSinkImpl::DidBuildModel() Line 407 C++ gkparser.dll!nsExpatDriver::DidBuildModel(unsigned int anErrorCode=0, int aNotifySink=1, nsIParser * aParser=0x09d51f40, nsIContentSink * aSink=0x09eaf420) Line 1106 + 0xc C++ gkparser.dll!nsParser::DidBuildModel(unsigned int anErrorCode=0) Line 1318 + 0x2e C++ gkparser.dll!nsParser::ResumeParse(int allowIteration=1, int aIsFinalChunk=1, int aCanInterrupt=1) Line 1994 C++ gkparser.dll!nsParser::OnStopRequest(nsIRequest * request=0x0b1535c8, nsISupports * aContext=0x00000000, unsigned int status=0) Line 2661 + 0x15 C++ jar50.dll!nsJARChannel::OnStopRequest(nsIRequest * req=0x09723810, nsISupports * ctx=0x00000000, unsigned int status=0) Line 694 C++ necko.dll!nsInputStreamPump::OnStateStop() Line 507 C++ necko.dll!nsInputStreamPump::OnInputStreamReady(nsIAsyncInputStream * stream=0x09fa32c0) Line 343 + 0xb C++ xpcom_core.dll!nsInputStreamReadyEvent::EventHandler(PLEvent * plevent=0x09429cb4) Line 119 C++ xpcom_core.dll!PL_HandleEvent(PLEvent * self=0x09429cb4) Line 698 + 0xa C xpcom_core.dll!PL_ProcessPendingEvents(PLEventQueue * self=0x0315ad88) Line 633 + 0x9 C xpcom_core.dll!_md_TimerProc(HWND__ * hwnd=0x000c0fa2, unsigned int uMsg=275, unsigned int idEvent=0, unsigned long dwTime=896232968) Line 1034 + 0x9 C user32.dll!_InternalCallWinProc@20() + 0x28 user32.dll!_UserCallWinProc@24() + 0xa1 user32.dll!_DispatchMessageWorker@8() + 0xcc6 user32.dll!_DispatchMessageW@4() + 0xf gkwidget.dll!nsAppShell::DispatchNativeEvent(int aRealEvent=1, void * aEvent=0x0246aa5c) Line 221 C++ appshell.dll!nsXULWindow::ShowModal() Line 401 C++ appshell.dll!nsContentTreeOwner::ShowAsModal() Line 428 C++ embedcomponents.dll!nsWindowWatcher::OpenWindowJS(nsIDOMWindow * aParent=0x030ebeb4, const char * aUrl=0x04013670, const char * aName=0x0012d2d8, const char * aFeatures=0x0012d330, int aDialog=1, unsigned int argc=1, long * argv=0x08038904, nsIDOMWindow * * _retval=0x0012d3cc) Line 789 C++ gklayout.dll!nsGlobalWindow::OpenInternal(const nsAString & aUrl={...}, const nsAString & aName={...}, const nsAString & aOptions={...}, int aDialog=1, long * argv=0x080388f8, unsigned int argc=4, nsISupports * aExtraArgument=0x00000000, nsIDOMWindow * * aReturn=0x0012d750) Line 4816 + 0x8c C++ gklayout.dll!nsGlobalWindow::OpenDialog(nsIDOMWindow * * _retval=0x0012d750) Line 3442 + 0x35 C++ xpcom_core.dll!XPTC_InvokeByIndex(nsISupports * that=0x030ebed4, unsigned int methodIndex=16, unsigned int paramCount=1, nsXPTCVariant * params=0x0012d750) Line 102 C++ xpc3250.dll!XPCWrappedNative::CallMethod(XPCCallContext & ccx={...}, XPCWrappedNative::CallMode mode=CALL_METHOD) Line 2068 + 0x1e C++ xpc3250.dll!XPC_WN_CallMethod(JSContext * cx=0x09170b00, JSObject * obj=0x00c4ee20, unsigned int argc=4, long * argv=0x080388f8, long * vp=0x0012da24) Line 1311 + 0xb C++ js3250.dll!js_Invoke(JSContext * cx=0x09170b00, unsigned int argc=4, unsigned int flags=0) Line 1293 + 0x20 C js3250.dll!js_Interpret(JSContext * cx=0x09170b00, unsigned char * pc=0x076e7a6f, long * result=0x0012e598) Line 3566 + 0xf C js3250.dll!js_Invoke(JSContext * cx=0x09170b00, unsigned int argc=1, unsigned int flags=2) Line 1313 + 0x13 C js3250.dll!js_InternalInvoke(JSContext * cx=0x09170b00, JSObject * obj=0x06f44010, long fval=119784520, unsigned int flags=0, unsigned int argc=1, long * argv=0x0012e890, long * rval=0x0012e894) Line 1390 + 0x14 C js3250.dll!JS_CallFunctionValue(JSContext * cx=0x09170b00, JSObject * obj=0x06f44010, long fval=119784520, unsigned int argc=1, long * argv=0x0012e890, long * rval=0x0012e894) Line 3831 + 0x1f C gklayout.dll!nsJSContext::CallEventHandler(JSObject * aTarget=0x06f44010, JSObject * aHandler=0x0723c448, unsigned int argc=1, long * argv=0x0012e890, long * rval=0x0012e894) Line 1401 + 0x21 C++ gklayout.dll!nsJSEventListener::HandleEvent(nsIDOMEvent * aEvent=0x0403bd18) Line 205 + 0x2d C++ gklayout.dll!nsEventListenerManager::HandleEventSubType(nsListenerStruct * aListenerStruct=0x04644a90, nsIDOMEvent * aDOMEvent=0x0403bd18, nsIDOMEventTarget * aCurrentTarget=0x041f2730, unsigned int aSubType=8, unsigned int aPhaseFlags=7) Line 1557 + 0x14 C++ gklayout.dll!nsEventListenerManager::HandleEvent(nsPresContext * aPresContext=0x0a84e3c0, nsEvent * aEvent=0x0012ee24, nsIDOMEvent * * aDOMEvent=0x0012edd8, nsIDOMEventTarget * aCurrentTarget=0x041f2730, unsigned int aFlags=7, nsEventStatus * aEventStatus=0x0012ee20) Line 1656 C++ gklayout.dll!nsXULElement::HandleDOMEvent(nsPresContext * aPresContext=0x0a84e3c0, nsEvent * aEvent=0x0012ee24, nsIDOMEvent * * aDOMEvent=0x0012edd8, unsigned int aFlags=7, nsEventStatus * aEventStatus=0x0012ee20) Line 2046 C++ gklayout.dll!PresShell::HandleDOMEventWithTarget(nsIContent * aTargetContent=0x0464ddb0, nsEvent * aEvent=0x0012ee24, nsEventStatus * aStatus=0x0012ee20) Line 6152 C++ gklayout.dll!nsButtonBoxFrame::MouseClicked(nsPresContext * aPresContext=0x0a84e3c0, nsGUIEvent * aEvent=0x0012f08c) Line 177 C++ gklayout.dll!nsButtonBoxFrame::HandleEvent(nsPresContext * aPresContext=0x0a84e3c0, nsGUIEvent * aEvent=0x0012f08c, nsEventStatus * aEventStatus=0x0012f550) Line 149 C++ gklayout.dll!PresShell::HandleEventInternal(nsEvent * aEvent=0x0012f08c, nsIView * aView=0x00000000, unsigned int aFlags=1, nsEventStatus * aStatus=0x0012f550) Line 6115 + 0x27 C++ gklayout.dll!PresShell::HandleEventWithTarget(nsEvent * aEvent=0x0012f08c, nsIFrame * aFrame=0x0bb5caec, nsIContent * aContent=0x0464ddb0, unsigned int aFlags=1, nsEventStatus * aStatus=0x0012f550) Line 5961 + 0x16 C++ gklayout.dll!nsEventStateManager::CheckForAndDispatchClick(nsPresContext * aPresContext=0x0a84e3c0, nsMouseEvent * aEvent=0x0012f7a8, nsEventStatus * aStatus=0x0012f550) Line 2960 + 0x42 C++ gklayout.dll!nsEventStateManager::PostHandleEvent(nsPresContext * aPresContext=0x0a84e3c0, nsEvent * aEvent=0x0012f7a8, nsIFrame * aTargetFrame=0x0bb5caec, nsEventStatus * aStatus=0x0012f550, nsIView * aView=0x07770b90) Line 1946 + 0x17 C++ gklayout.dll!PresShell::HandleEventInternal(nsEvent * aEvent=0x0012f7a8, nsIView * aView=0x07770b90, unsigned int aFlags=1, nsEventStatus * aStatus=0x0012f550) Line 6125 + 0x34 C++ gklayout.dll!PresShell::HandleEvent(nsIView * aView=0x07770b90, nsGUIEvent * aEvent=0x0012f7a8, nsEventStatus * aEventStatus=0x0012f550, int aForceHandle=1, int & aHandled=1) Line 5900 + 0x19 C++ gklayout.dll!nsViewManager::HandleEvent(nsView * aView=0x07770b90, nsGUIEvent * aEvent=0x0012f7a8, int aCaptured=1) Line 2497 C++ gklayout.dll!nsViewManager::DispatchEvent(nsGUIEvent * aEvent=0x0012f7a8, nsEventStatus * aStatus=0x0012f684) Line 2217 + 0x14 C++ gklayout.dll!HandleEvent(nsGUIEvent * aEvent=0x0012f7a8) Line 174 C++ gkwidget.dll!nsWindow::DispatchEvent(nsGUIEvent * event=0x0012f7a8, nsEventStatus & aStatus=nsEventStatus_eIgnore) Line 1150 + 0xa C++ gkwidget.dll!nsWindow::DispatchWindowEvent(nsGUIEvent * event=0x0012f7a8) Line 1171 C++ gkwidget.dll!nsWindow::DispatchMouseEvent(unsigned int aEventType=301, unsigned int wParam=0, nsPoint * aPoint=0x00000000) Line 5762 + 0x15 C++ gkwidget.dll!ChildWindow::DispatchMouseEvent(unsigned int aEventType=301, unsigned int wParam=0, nsPoint * aPoint=0x00000000) Line 6018 C++ gkwidget.dll!nsWindow::ProcessMessage(unsigned int msg=514, unsigned int wParam=0, long lParam=2752632, long * aRetValue=0x0012fc7c) Line 4419 + 0x1c C++ gkwidget.dll!nsWindow::WindowProc(HWND__ * hWnd=0x00090d68, unsigned int msg=514, unsigned int wParam=0, long lParam=2752632) Line 1442 + 0x1b C++ user32.dll!_InternalCallWinProc@20() + 0x28 user32.dll!_UserCallWinProcCheckWow@32() + 0xb7 user32.dll!_DispatchMessageWorker@8() + 0xdc user32.dll!_DispatchMessageW@4() + 0xf gkwidget.dll!nsAppShell::Run() Line 135 C++ appcomps.dll!nsAppStartup::Run() Line 208 C++ mozilla.exe!main1(int argc=1, char * * argv=0x00347930, nsISupports * nativeApp=0x00c06230) Line 1325 + 0x20 C++ mozilla.exe!main(int argc=1, char * * argv=0x00347930) Line 1831 + 0x25 C++ mozilla.exe!mainCRTStartup() Line 398 + 0x11 C kernel32.dll!_BaseProcessStart@4() + 0x23 problem: the file that addressbook is trying to rename *doesn't* exist. this indicates a serious logic error :).
Attached patch Possible fix (obsolete) — Splinter Review
This patch may help to fix this problem, and if it doesn't it still will correctly deal with moving files about by changing to nsIFile. nsFileSpec doesn't handle MakeUnique properly apparently (see https://bugzilla.mozilla.org/show_bug.cgi?id=132180#c29 and #30). The patch was actually going to be part of patch 2 v4, but David wants it for TB 1.5, hence I've extracted the relevant function for this patch, and will tidy up with a revised patch 2 v4 on bug 132180 later. I have tested it on linux, and as part of patch 2 v4 on windows, but I'd apprechiate if you could test it again on windows please David.
Attachment #190432 - Flags: review?(bienvenu)
Comment on attachment 190432 [details] [diff] [review] Possible fix thx very much for doing this. I tried the patch on windows and it worked for me. Just some nits about the punctuation in the comments + // Now move the corrupt file to it's backup location "its" // First create a clone of the corrupt mab file that we'll // use to generate the name for the backup file that we are // going to move it. "going to move it to." // First append .bak we have to do this the long way as "// First append .bak - "
Attachment #190432 - Flags: review?(bienvenu) → review+
Revised incorporating David's comments, carrying forward his r+. Dan, see my previous comment on this bug - this patch is taken from what we were planning on bug 132180 with "Patch 2". Both myself and David have tested versions of this on Windows (and linux) any problems (ref https://bugzilla.mozilla.org/show_bug.cgi?id=132180#c23). As David wants this, but not the rest of the patch for 1.5 I've seperated it out . I'll do a revised version of the full patch 2 once the branch has happend.
Attachment #190432 - Attachment is obsolete: true
Attachment #190436 - Flags: superreview?(dmose)
Attachment #190436 - Flags: review+
Attachment #190436 - Flags: superreview?(dmose) → superreview+
Comment on attachment 190436 [details] [diff] [review] Possible fix v2 (checked in) Requesting approval. Patch that alters how we handle corrupt address books, has been tested on windows & linux, should be low risk.
Attachment #190436 - Flags: approval1.8b4?
Attachment #190436 - Flags: approval1.8b4? → approval1.8b4+
Comment on attachment 190436 [details] [diff] [review] Possible fix v2 (checked in) Checked in: /cvsroot/mozilla/mailnews/addrbook/src/nsAddrDatabase.cpp,v <-- nsAddrDatabase.cpp new revision: 1.131; previous revision: 1.130
Attachment #190436 - Attachment description: Possible fix v2 → Possible fix v2 (checked in)
Status: UNCONFIRMED → NEW
Ever confirmed: true
Marking this as fixed, please reopen if you can reproduce this bug with a build that has this patch in.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Blocks: 292207
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: