Bug 287003 Fix ASSERTION: failed to rename corrupt mab file in nsAddrDatabase.cpp r=bienvenu, sr=mscott, a=bsmedberg